tests/errors/test_06.x
// Incompatible type for return

fn foo() -> void {
    return 21;
}

fn main() -> void {
    return 1;
}